# deepresearch-notebook

./: .gitignore  README.md  prompts.yaml  pyproject.toml  requirements.txt
research_pipeline/: __init__.py  cli.py  config.py  models.py  openrouter_client.py  parsing.py  pipeline.py  prompts.py  research.py  search.py
research_ui/: banner.txt  research_backend.py  research_cli.py  style.tcss
tests/: test_cli.py  test_openrouter_client.py  test_pipeline_yaml.py  test_research.py
